# fivehundred

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
src/: card.h  card_500.cpp  card_500.h  card_collection_500.cpp  card_collection_500.h  console.cpp  console.h  deck_500.cpp  deck_500.h  game_500.h  game_state_500.cpp  game_state_500.h  hand_500.cpp  hand_500.h  kitty_500.cpp  kitty_500.h  mcts.cpp  trick_500.cpp  trick_500.h
test/: test_card_500.cpp  test_card_collection_500.cpp  test_console.cpp  test_deck_500.cpp  test_game_state_500.cpp  test_hand_500.cpp  test_mcts.cpp  test_mcts_500.cpp  test_trick_500.cpp
